[tool.poetry]
name = "agendimed"
version = "0.1.0"
description = ""
authors = ["Vinicius999 <viniciussilva.dsc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.45.0"
st-gsheets-connection = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
